src/main/kubernetes/veidemann-initdb-kubernetes.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: db
