src/main/kubernetes/linkerd.yml
# runs linkerd in a daemonset, in linker-to-linker mode, routing gRPC requests
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: l5d
spec:
  selector:
    matchLabels:
      app: l5d
  template:
    metadata:
      labels:
        app: l5d
    spec:
      hostNetwork: false
      dnsPolicy: ClusterFirst
      volumes:
      - name: l5d-config
        configMap:
          name: "l5d-config"
      - name: certificates
        secret:
          secretName: ingress-certs
      containers:
      - name: l5d
        image: buoyantio/linkerd:1.3.5
        args:
        - /io.buoyant/linkerd/config/config.yaml
        ports:
        - name: tls
          containerPort: 443
          hostPort: 443
        - name: grpc-ingress
          containerPort: 4443
          hostPort: 4443
        - name: grpc-outgoing
          containerPort: 4340
          hostPort: 4340
        - name: grpc-incoming
          containerPort: 4341
        - name: admin
          containerPort: 9990
        volumeMounts:
        - name: "l5d-config"
          mountPath: "/io.buoyant/linkerd/config"
          readOnly: true
        - name: "certificates"
          mountPath: "/io.buoyant/linkerd/certs"
          readOnly: true
      - name: kubectl
        image: buoyantio/kubectl:v1.8.5
        args:
        - "proxy"
        - "-p"
        - "8001"
---
apiVersion: v1
kind: Service
metadata:
  name: l5d
spec:
  selector:
    app: l5d
  type: ClusterIP
  ports:
  - name: tls
    port: 443
  - name: grpc-ingress
    port: 4443
  - name: grpc-outgoing
    port: 4340
  - name: grpc-incoming
    port: 4341
  - name: admin
    port: 9990
