src/main/kubernetes/logging.yml
apiVersion: extensions/v1beta2
kind: DaemonSet
metadata:
  name: fluentd
spec:
  template:
    metadata:
      labels:
        app: logging
        id: fluentd
      name: fluentd
    spec:
      containers:
        - name: fluentd-es
          image: norsknettarkiv/fluentd-nna
          volumeMounts:
            - name: varlibdockercontainers
              mountPath: /mnt/sda1/var/lib/docker/containers
            - name: varlibboot2docker
              mountPath: /var/lib/boot2docker
            - name: varlog
              mountPath: /var/log
            - name: config-volume
              mountPath: /etc/fluent
      volumes:
        - hostPath:
            path: /mnt/sda1/var/lib/boot2docker
          name: varlibboot2docker
        - hostPath:
            path: /mnt/sda1/var/lib/docker/containers
          name: varlibdockercontainers
        - hostPath:
            path: /var/log
          name: varlog
        - name: config-volume
          configMap:
            name: fluentd.v1conf
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: logging
    id: elasticsearch-logging
  name: elasticsearch-logging
spec:
  ports:
    - port: 9200
  selector:
    app: logging
    id: elasticsearch-logging
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: logging
    id: kibana-logging
  name: kibana-logging
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 5601
  selector:
    app: logging
    id: kibana-logging
