src/main/kubernetes/rethinkdb-cl.yml
# Namespace
---
apiVersion: v1
kind: Namespace
metadata:
  name: db
---
# RethinkDB
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rethinkdb
    tier: backend
    role: admin
  name: rethinkdb-admin
  namespace: db
spec:
  type: LoadBalancer
  ports:
   - port: 8080
     targetPort: admin
  selector:
    app: rethinkdb
    role: admin
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rethinkdb
    tier: backend
    role: replica
  name: rethinkdb
  namespace: db
spec:
  ports:
    - port: 29015
      targetPort: cluster
  selector:
    app: rethinkdb
    role: replica
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rethinkdb
    tier: backend
    role: proxy
  name: rethink
  namespace: db
spec:
  type: LoadBalancer
  ports:
    - port: 28015
      targetPort: driver
  selector:
    app: rethinkdb
    role: proxy
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: rethinkdb
  name: rethinkdb-replica
  namespace: db
spec:
  template:
    metadata:
      labels:
        app: rethinkdb
        role: replica
        tier: backend
    spec:
      containers:
      - image: rosskukulinski/rethinkdb-kubernetes:2.3.5
        args:
          - "--cache-size"
          - "256"
        imagePullPolicy: Always
        name: rethinkdb
        ports:
        - containerPort: 8080
          name: admin
        - containerPort: 28015
          name: driver
        - containerPort: 29015
          name: cluster
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 512Mi
        volumeMounts:
        - mountPath: /data/rethinkdb_data
          name: rethinkdb-storage
        livenessProbe:
          exec:
            command:
              - /ready-probe.sh
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
              - /ready-probe.sh
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
      volumes:
      - name: rethinkdb-storage
        emptyDir: {}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: rethinkdb
  name: rethinkdb-admin
  namespace: db
spec:
  template:
    metadata:
      labels:
        app: rethinkdb
        role: admin
        tier: backend
    spec:
      containers:
      - image: rosskukulinski/rethinkdb-kubernetes:2.3.5
        imagePullPolicy: Always
        name: rethinkdb
        ports:
        - containerPort: 8080
          name: admin
        - containerPort: 28015
          name: driver
        - containerPort: 29015
          name: cluster
        livenessProbe:
          exec:
            command:
              - /ready-probe.sh
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
              - /ready-probe.sh
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /data/rethinkdb_data
          name: storage
      volumes:
      - name: storage
        emptyDir: {}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: rethinkdb
  name: rethink
  namespace: db
spec:
  template:
    metadata:
      labels:
        app: rethinkdb
        role: proxy
        tier: backend
    spec:
      containers:
      - image: rosskukulinski/rethinkdb-kubernetes:2.3.5
        imagePullPolicy: Always
        name: rethinkdb
        ports:
        - containerPort: 8080
          name: admin
        - containerPort: 28015
          name: driver
        - containerPort: 29015
          name: cluster
        livenessProbe:
          exec:
            command:
              - /ready-probe.sh
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
              - /ready-probe.sh
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /data/rethinkdb_data
          name: storage
      volumes:
      - name: storage
        emptyDir: {}
