src/main/kubernetes/rethinkdb-single.yml
# Rethink DB
apiVersion: v1
kind: Service
metadata:
  name: rethink
  labels:
    app: rethinkdb
    tier: backend
    role: master
spec:
  ports:
  - name: api
    port: 28015
    targetPort: 28015
  - name: intracluster
    port: 29015
    targetPort: 29015
  - name: webconsole
    port: 8888
    targetPort: 8080
    nodePort: 30888
  selector:
    app: rethinkdb
    tier: backend
    role: master
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: rethink
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rethinkdb
        tier: backend
        role: master
    spec:
      containers:
      - name: rethinkdb
        image: rethinkdb:2.3.6
        ports:
        - containerPort: 28015
        - containerPort: 29015
        - containerPort: 8080
        volumeMounts:
        - mountPath: /data
          name: datadir
        resources:
            requests:
                memory: "500Mi"
      volumes:
      - name: datadir
        persistentVolumeClaim:
          claimName: db-data-claim
