src/main/kubernetes/veidemann-kubernetes.yml
# Veidemann app for Kubernetes
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: veidemann
---
# Harvester (proxy and browser)
apiVersion: v1
kind: Service
metadata:
  name: veidemann-harvester
  namespace: veidemann
  labels:
    app: harvester
    tier: backend
    role: worker
spec:
  ports:
  - name: harvester-api
    port: 9090
    targetPort: api
  - name: harvester-proxy
    port: 8080
    targetPort: proxy
  - name: browser-api
    port: 9222
    targetPort: debug
  selector:
    app: harvester
    tier: backend
    role: worker
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: veidemann-harvester
  namespace: veidemann
spec:
  template:
    metadata:
      labels:
        app: harvester
        tier: backend
        role: worker
    spec:
      containers:
      - name: browser
        image: norsknettarkiv/chrome-headless
        ports:
        - name: debug
          containerPort: 9222
        volumeMounts:
        - mountPath: /data
          name: workdir
      - name: proxy
        image: norsknettarkiv/broprox-harvester:1.0.0-SNAPSHOT
        ports:
        - name: proxy
          containerPort: 8080
        - name: api
          containerPort: 9090
        volumeMounts:
        - mountPath: /workdir
          name: workdir
        - name: log4j-config
          mountPath: /broprox-harvester/config/log4j2.xml
          subPath: log4j2.xml
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      volumes:
      - emptyDir: {}
        name: workdir
      - name: log4j-config
        configMap:
          name: log4j.conf
---
# Content writer
apiVersion: v1
kind: Service
metadata:
  name: veidemann-contentwriter
  namespace: veidemann
  labels:
    app: contentwriter
    tier: backend
    role: worker
spec:
  ports:
  - name: api
    port: 8080
    targetPort: 8080
    nodePort: 31575
  - name: explorer
    port: 8081
    targetPort: 8081
    nodePort: 31576
  selector:
    app: contentwriter
    tier: backend
    role: worker
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: veidemann-contentwriter
  namespace: veidemann
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: contentwriter
        tier: backend
        role: worker
    spec:
      containers:
      - name: contentwriter
        image: norsknettarkiv/broprox-contentwriter:1.0.0-SNAPSHOT
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /workdir
          name: workdir
        - mountPath: /warcs
          name: warcs
        - name: log4j-config
          mountPath: /broprox-contentwriter/config/log4j2.xml
          subPath: log4j2.xml
      - name: contentexplorer
        image: norsknettarkiv/broprox-contentexplorer:1.0.0-SNAPSHOT
        ports:
        - containerPort: 8081
        volumeMounts:
        - mountPath: /workdir
          name: workdir
        - mountPath: /warcs
          name: warcs
        - name: log4j-config
          mountPath: /broprox-contentwriter/config/log4j2.xml
          subPath: log4j2.xml
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      volumes:
      - emptyDir: {}
        name: workdir
      - emptyDir: {}
        name: warcs
      - name: log4j-config
        configMap:
          name: log4j.conf

---
# Frontier
apiVersion: v1
kind: Service
metadata:
  name: veidemann-frontier
  namespace: veidemann
  labels:
    app: frontier
    tier: backend
    role: worker
spec:
  ports:
  - name: api
    port: 7700
    targetPort: 7700
  selector:
    app: frontier
    tier: backend
    role: worker
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: veidemann-frontier
  namespace: veidemann
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: frontier
        tier: backend
        role: worker
    spec:
      containers:
      - name: frontier
        image: norsknettarkiv/broprox-frontier:1.0.0-SNAPSHOT
        ports:
        - containerPort: 7700
        volumeMounts:
        - mountPath: /workdir
          name: workdir
        - name: log4j-config
          mountPath: /broprox-frontier/config/log4j2.xml
          subPath: log4j2.xml
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      volumes:
      - emptyDir: {}
        name: workdir
      - name: log4j-config
        configMap:
          name: log4j.conf

---
# Controller
apiVersion: v1
kind: Service
metadata:
  name: veidemann-controller
  namespace: veidemann
  labels:
    app: controller
    tier: backend
    role: master
spec:
  ports:
  - name: api
    port: 50051
    targetPort: 50051
    nodePort: 30891
  selector:
    app: controller
    tier: backend
    role: master
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: veidemann-controller
  namespace: veidemann
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: controller
        tier: backend
        role: master
    spec:
      containers:
      - name: controller
        image: norsknettarkiv/broprox-controller:1.0.0-SNAPSHOT
        ports:
        - containerPort: 50051
        volumeMounts:
        - name: log4j-config
          mountPath: /broprox-controller/config/log4j2.xml
          subPath: log4j2.xml
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      volumes:
      - name: log4j-config
        configMap:
          name: log4j.conf

---
# Veidemann Robots honoring service
apiVersion: v1
kind: Service
metadata:
  name: veidemann-robots
  namespace: veidemann
  labels:
    app: robots
    tier: backend
    role: worker
spec:
  ports:
  - name: api
    port: 50052
    targetPort: 50052
  selector:
    app: robots
    tier: backend
    role: worker
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: veidemann-robots
  namespace: veidemann
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: robots
        tier: backend
        role: worker
    spec:
      containers:
      - name: robots
        image: norsknettarkiv/broprox-robotrules-service:1.0.0-SNAPSHOT
        ports:
        - containerPort: 50052
        volumeMounts:
        - name: log4j-config
          mountPath: /broprox-robotrules-service/config/log4j2.xml
          subPath: log4j2.xml
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      volumes:
      - name: log4j-config
        configMap:
          name: log4j.conf

---
# Veidemann DNS resolver service
apiVersion: v1
kind: Service
metadata:
  name: veidemann-dnsresolver
  namespace: veidemann
  labels:
    app: dnsresolver
    tier: backend
    role: worker
spec:
  ports:
  - name: api
    port: 50052
    targetPort: 50052
  selector:
    app: dnsresolver
    tier: backend
    role: worker
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: veidemann-dnsresolver
  namespace: veidemann
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dnsresolver
        tier: backend
        role: worker
    spec:
      containers:
      - name: robots
        image: norsknettarkiv/broprox-dns-service:1.0.0-SNAPSHOT
        ports:
        - containerPort: 50052
        volumeMounts:
        - name: log4j-config
          mountPath: /broprox-dns-service/config/log4j2.xml
          subPath: log4j2.xml
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      volumes:
      - name: log4j-config
        configMap:
          name: log4j.conf

---
# API Gateway
apiVersion: v1
kind: Service
metadata:
  name: veidemann-api-gateway
  namespace: veidemann
  labels:
    app: api-gateway
    tier: frontend
    role: api-gateway
spec:
  ports:
  - port: 3010
    targetPort: 3010
  selector:
    app: api-gateway
    tier: frontend
    role: api-gateway
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: veidemann-api-gateway
  namespace: veidemann
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: api-gateway
        tier: frontend
        role: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: norsknettarkiv/broprox-api-gateway
        ports:
        - containerPort: 3010
      restartPolicy: Always
      dnsPolicy: ClusterFirst

---
# Admin GUI
apiVersion: v1
kind: Service
metadata:
  name: veidemann-admin
  namespace: veidemann
  labels:
    app: admin
    tier: frontend
    role: admin
spec:
  ports:
  - name: gui
    port: 80
    targetPort: 80
    nodePort: 30890
  selector:
    app: admin
    tier: frontend
    role: admin
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: veidemann-admin
  namespace: veidemann
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: admin
        tier: frontend
        role: admin
    spec:
      containers:
      - name: admin
        image: norsknettarkiv/broprox-gui
        ports:
        - containerPort: 80
      restartPolicy: Always
      dnsPolicy: ClusterFirst

---
# Test web server and dns
apiVersion: v1
kind: Service
metadata:
  name: veidemann-testsites
  namespace: veidemann
  labels:
    app: testsites
    tier: backend
    role: test
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
    nodePort: 30980
  - name: dns
    port: 53
    targetPort: dns
    protocol: UDP
    nodePort: 30953
  selector:
    app: testsites
    tier: backend
    role: test
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: veidemann-testsites
  namespace: veidemann
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: testsites
        tier: backend
        role: test
    spec:
      containers:
      - name: testsites
        image: norsknettarkiv/testsites
        ports:
        - name: http
          containerPort: 80
        - name: dns
          containerPort: 53
          protocol: UDP
      restartPolicy: Always
      dnsPolicy: ClusterFirst
