src/main/kubernetes/zipkin.yml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: zipkin
---
# Zipkin log trace server
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: zipkin
  labels:
    app: tracer
    tier: backend
    role: log
spec:
  ports:
  - name: api
    port: 9411
    targetPort: 9411
    nodePort: 30889
  selector:
    app: tracer
    tier: backend
    role: log
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: zipkin
  namespace: zipkin
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tracer
        tier: backend
        role: log
    spec:
      containers:
      - name: tracer
        image: openzipkin/zipkin
        ports:
        - containerPort: 9411
      restartPolicy: Always
      dnsPolicy: ClusterFirst
